--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "index.js",
   "scripts": {
     "build": "next build",
+    "build:staging": "env-cmd -f .env.test next build",
+    "build:production": "env-cmd -f .env.production next build",
     "dev": "concurrently -k -r -s first \"npm run open:src\" \"npm run lint:watch\"",
     "lint": "esw src/pages/ src/components/ --color --ext .ts,.tsx,.js",
     "lint:watch": "npm run lint -- --watch",
     "open:src": "next dev",
     "precommit": "npm run test && npm run lint",
     "start": "next start",
-    "start:production": "next -p 4000",
+    "start:staging": "env-cmd -f .env.test next start",
+    "start:production": "env-cmd -f .env.production next start",
     "test": "jest test --passWithNoTests",
     "test:cover": "npm run test -- --coverage",
     "test:ci": "jest --ci"
@@ -26,6 +29,7 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.1",
     "@reduxjs/toolkit": "^1.8.5",
+    "env-cmd": "^10.1.0",
     "next": "^12.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
