--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Codebase SSR with typescript and nextjs",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fadlytanjung/codebase-ssr-ts.git"
+  },
   "scripts": {
     "build": "next build",
     "build:staging": "env-cmd -f .env.test next build",
@@ -11,13 +15,14 @@
     "lint": "esw src/pages/ src/components/ --color --ext .ts,.tsx,.js",
     "lint:watch": "npm run lint -- --watch",
     "open:src": "next dev",
-    "precommit": "npm run test && npm run lint",
+    "precommit": "npm test -- -u && npm run lint",
     "start": "next start",
     "start:staging": "env-cmd -f .env.test next start",
     "start:production": "env-cmd -f .env.production next start",
     "test": "jest test --passWithNoTests",
     "test:cover": "npm run test -- --coverage",
-    "test:ci": "jest --ci"
+    "test:ci": "jest --ci",
+    "prepare": "husky install"
   },
   "author": "Fadly Tanjung",
   "license": "ISC",
@@ -53,6 +58,7 @@
     "eslint-config-next": "^12.2.5",
     "eslint-plugin-testing-library": "^5.6.0",
     "eslint-watch": "^8.0.0",
+    "husky": "^8.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "postcss": "^8.4.16",
