feat: add middleware and integrate api

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 API_BASE_URL=https://api.codebase.com/v1
 APP_KEY=
 NEXT_PUBLIC_APP_VERSION=1.0.0
+CLIENT_ID=HcybtjNTWlKl32Vwvmzoa2kYJFkQwCxM4EPlt3nr3TE
+UNSPLASH_API_BASE_URL=https://api.unsplash.com/
