--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:staging": "env-cmd -f .env.test next build",
     "build:production": "env-cmd -f .env.production next build",
     "dev": "concurrently -k -r -s first \"npm run open:src\" \"npm run lint:watch\"",
-    "lint": "esw src/pages/ src/components/ --color --ext .ts,.tsx,.js",
+    "lint": "esw src/pages/ src/components/ src/actions/ --color --ext .ts,.tsx,.js",
     "lint:watch": "npm run lint -- --watch",
     "open:src": "next dev",
     "precommit": "npm run test && npm run lint",
@@ -32,10 +32,14 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.96",
     "@mui/material": "^5.10.1",
     "@reduxjs/toolkit": "^1.8.5",
+    "axios": "^0.27.2",
     "env-cmd": "^10.1.0",
     "next": "^12.2.5",
+    "next-auth": "^4.10.3",
+    "next-redux-wrapper": "^7.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2"
